FEAT: change usb_communication code structure

--- a/usb_communication/Makefile
+++ b/usb_communication/Makefile
@@ -1,31 +1,27 @@
-#Makefile for similar triangles verification
+#Makefile for usb_communication
 #http://man7.org/linux/man-pages/man1/g++.1.html
 
-IDIR_DEP	:= 
+SRC_DIR		:= src
+INC_DIR		:= include
 LIB_DIR		:=
 TARGETS		:= usb_comm_out
 OUTPUT_DIR	:= build
 
 CC 			:= g++
-CFLAGS 		:= -g -Wall -std=c++11 -lpthread -Werror
-SRC 		:= usb_communication
+CFLAGS 		:= -g3 -Wall -std=c++11 -lpthread -Werror
 
-$(OUTPUT_DIR)/$(TARGETS) : $(OUTPUT_DIR)/$(TARGETS).o
-	$(CC) $^ -o $@ $(CFLAGS)
+SRC_FILES 	:= $(wildcard *.c ./$(SRC_DIR)/*.c)
+OBJS		:= $(patsubst %.c, %.o, $(notdir $(SRC_FILES)))
+
+$(TARGETS) : $(OBJS)
+	$(CC) $^ -o $(OUTPUT_DIR)/$@ $(CFLAGS) -I $(INC_DIR)
+	@mv *.o $(OUTPUT_DIR)
 	@echo "Linking complete!"
 
-$(OUTPUT_DIR)/$(TARGETS).o : $(OUTPUT_DIR)/$(TARGETS).s
-	$(CC) -c $^ -o $@ $(CFLAGS)
-	@echo "Assembly complete!"
-
-$(OUTPUT_DIR)/$(TARGETS).s : $(OUTPUT_DIR)/$(TARGETS).i
-	$(CC) -S $^ -o $@ $(CFLAGS)
-	@echo "Compilation complete!"
-
-$(OUTPUT_DIR)/$(TARGETS).i : $(SRC).c
+$(OBJS) : $(SRC_FILES)
 	@mkdir -p $(OUTPUT_DIR)
-	$(CC) -E $^ -o $@ $(CFLAGS)
-	@echo "Pre-processing complete!"
+	$(CC) -c $^ $(CFLAGS) -I $(INC_DIR)
+	@echo "Compiling and assembly complete!"
 
 clean:
 	rm -rf $(OUTPUT_DIR)
