--- a/wireless_usb_cdc_acm/raw/second/pca10059_xfn/blank/armgcc/Makefile
+++ b/wireless_usb_cdc_acm/raw/second/pca10059_xfn/blank/armgcc/Makefile
@@ -41,6 +41,7 @@ SRC_FILES += \
   $(PROJ_DIR)/../../security.c \
   $(PROJ_DIR)/../../uart.c \
   $(PROJ_DIR)/../../usb_cdc_acm.c \
+  $(PROJ_DIR)/../../serial.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
